small margin fix on mobile

--- a/src/pages/About.css
+++ b/src/pages/About.css
@@ -15,7 +15,7 @@ h1 {
 @media screen and (max-width: 767px) {
   .about-page-container {
     margin-top: 3em;
-    margin-bottom: 0em;
+    margin-bottom: 5em;
   }
 }
 
