--- a/src/pages/Contact.css
+++ b/src/pages/Contact.css
@@ -8,7 +8,7 @@
 @media screen and (max-width: 767px) {
   .contact-page-container {
     margin-top: 3em;
-    margin-bottom: 0em;
+    margin-bottom: 5em;
   }
 }
 
