--- a/src/pages/Events.css
+++ b/src/pages/Events.css
@@ -8,7 +8,7 @@
 @media screen and (max-width: 767px) {
   .event-page-container {
     margin-top: 3em; 
-    margin-bottom: 0; 
+    margin-bottom: 5em; 
   }
   .event-page-container h2 {
     font-size: 28px;
